preview/ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: debian-test
  namespace: preview
  annotations:
          # cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
   
spec:
  rules:
    - host: preview.rel.polysign.io
  backend:
    serviceName: debian-test
    servicePort: 8080
  tls:
    - hosts:
      - preview.rel.polysign.io
      secretName: tls-secret
